# packages/shared-contracts/src/openapi.json
@@ -2653,6 +2653,27 @@
           "uploads"
         ]
       }
+    },
+    "/users/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "description": ""
+          },
+          "401": {
+            "description": "Unauthenticated"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "429": {
+            "description": "Too Many Requests"
+          }
+        },
+        "tags": [
+          "users"
+        ]
+      }
     }
   },
   "servers": [],
@@ -2749,6 +2770,9 @@
     },
     {
       "name": "uploads"
+    },
+    {
+      "name": "users"
     }
   ]
 }
